fixed center alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,20 @@
-.welcome {
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #1a2332;
+	color: #9fef00;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.title {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-}
-.title {
 	text-align: center;
 }
 body {
